Renamed first post

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,7 +22,7 @@
                     <a href="/blog/">blog</a>
                 </li>
                 <li>
-                    <a href="/resume/">resume</a>
+                    <a target="_blank" href="/resume/">resume</a>
                 </li>
                 <li>
                     <a href="/search/" class="nav-search-link" title="SEARCH">
