--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,6 +19,9 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
+                    <a href="#href-portfolio">portfolio</a>
+                </li>
+                <li>
                     <a href="/blog/">blog</a>
                 </li>
                 <li>
