--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -49,7 +49,7 @@
                     {% if site.stackoverflow_username %}
                     <li>
                         <a target="_blank" href="https://stackoverflow.com/users/{{ site.stackoverflow_username }}">
-                            <img src="http://stackoverflow.com/users/flair/1306419.png?theme=dark" width="208" height="58" alt="Profile for Shobhit Puri at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="Profile for Shobhit Puri at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
+                            <img id="img-stackoverflow" src="http://stackoverflow.com/users/flair/1306419.png?theme=dark" width="208" height="58" alt="Profile for Shobhit Puri at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="Profile for Shobhit Puri at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
                         </a>
                     </li>
                     {% endif %}
