--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -28,6 +28,9 @@
                     <a target="_blank" href="/resume/">resume</a>
                 </li>
                 <li>
+                    <a target="_blank" href="/courses/">Courses</a>
+                </li>
+                <li>
                     <a href="/search/" class="nav-search-link" title="SEARCH">
                         <span class="fa fa-search nav-search-icon"></span>
                     </a>
