Updated links again

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
                     {% endif %}
                     {% if site.linkedin_username %}
                     <li>
-                        <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}">
+                        <a target="_blank" href="https://www.linkedin.com/in/{{ site.linkedin_username }}">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -47,7 +47,7 @@
                     {% endif %}
                     {% if site.contact %}
                     <li>
-                        <a href="{{ site.contact }}">
+                        <a target="_blank" href="{{ site.contact }}">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
